@@ -1,0 +1,4 @@
+CREATE TABLE shortgroups LIKE allgroups;
+
+UPDATE `site` set `value` = '131' where `setting` = 'sqlpatch';
+
