@@ -1059,7 +1059,7 @@ INSERT INTO site
 	('addpar2', '0'),
 	('fixnamethreads', '1'),
 	('fixnamesperrun', '10'),
-	('sqlpatch','129');
+	('sqlpatch','131');
 
 DROP TABLE IF EXISTS logging;
 CREATE TABLE logging (
@@ -1414,6 +1414,19 @@ CREATE TABLE allgroups (
 
 CREATE INDEX ix_allgroups_id ON allgroups(id);
 CREATE INDEX ix_allgroups_name ON allgroups(name);
+
+DROP TABLE IF EXISTS shortgroups;
+CREATE TABLE shortgroups (
+  id INT(11) NOT NULL AUTO_INCREMENT,
+  name VARCHAR(255) NOT NULL DEFAULT "",
+  first_record BIGINT UNSIGNED NOT NULL DEFAULT "0",
+  last_record BIGINT UNSIGNED NOT NULL DEFAULT "0",
+  updated DATETIME DEFAULT NULL,
+  PRIMARY KEY  (id)
+) ENGINE=MYISAM DEFAULT CHARACTER SET utf8 COLLATE utf8_unicode_ci AUTO_INCREMENT=1 ;
+
+CREATE INDEX ix_shortgroups_id ON shortgroups(id);
+CREATE INDEX ix_shortgroups_name ON shortgroups(name);
 
 DROP TABLE IF EXISTS country;
 CREATE TABLE country (
