@@ -4,7 +4,7 @@ require_once(WWW_DIR."lib/framework/db.php");
 require_once(WWW_DIR."lib/nntp.php");
 
 if (!isset($argv[1]))
-    exit("This script gets all binary groups from usenet and compares against yours.\nTo run: \ncheck_usenet_groups.php true\n");
+    exit("This script gets all binary groups from usenet and compares against yours.\nTo run: \ncheck_usenet_groups.php 1000000\n");
 
 $nntp = new Nntp();
 $nntp->doConnect();
@@ -12,6 +12,8 @@ $data = $nntp->getGroups();
 
 $db = new DB();
 $res = $db->query("SELECT name FROM groups");
+$counter = 0;
+$minvalue = $argv[1];
 
 foreach ($data as $newgroup)
 {
@@ -24,11 +26,21 @@ foreach ($grps as $grp)
 {
 	if (!MyInArray($res, $grp, "name"))
 	{
-	    $data = $db->queryOneRow(sprintf("SELECT (MAX(last_record) - MIN(first_record)) AS count, (MAX(last_record) - MIN(first_record))/(MAX(updated)-MIN(updated)) as per_second from allgroups WHERE name = %s", $db->escapeString($grp["name"])));
-    	if (floor($data["per_second"]*3600) >= 1000000)
-        	echo $grp["name"]." has ".number_format($data["count"])." headers available, averaging ".number_format(floor($data["per_second"]*3600))." per hour\n";
+	    $data = $db->queryOneRow(sprintf("SELECT (MAX(last_record) - MIN(first_record)) AS count, (MAX(last_record) - MIN(last_record))/(MAX(updated)-MIN(updated)) as per_second, (MAX(last_record) - MIN(last_record)) AS tracked, MIN(updated) AS firstchecked from allgroups WHERE name = %s", $db->escapeString($grp["name"])));
+    	if (floor($data["per_second"]*3600) >= $minvalue)
+    	{
+			echo "\n".$grp["name"]."\n"
+				."Available Post Count: ".number_format($data["count"])."\n"
+				."Date First Checked:   ".$data["firstchecked"]."\n"
+				."Posts Since First:    ".number_format($data["tracked"])."\n"
+				."Average Per Hour:     ".number_format(floor($data["per_second"]*3600))."\n";
+        	$counter++;
+		}
 	}
 }
+
+if ($counter == 0)
+	echo "No groups currently exceeding ".number_format($minvalue)." posts per hour. Try again in a few minutes.\n";
 
 
 function myInArray($array, $value, $key){
