@@ -58,12 +58,12 @@ hashcheck = int(dbgrab[0][2])
 if hashcheck == 0:
 	sys.exit("We have updated the way collections are created, the collection table has to be updated to use the new changes.\nphp misc/testing/DB_scripts/reset_Collections.php true")
 
-#before we get the groups, lets update allgroups
+#before we get the groups, lets update shortgroups
 subprocess.call(["php", pathname+"/../nix_scripts/tmux/bin/update_groups.php", ""])
 
 #query to grab all active groups
 cur = connect()
-cur[0].execute("SELECT g.name AS groupname, g.last_record AS our_last, a.last_record AS thier_last FROM groups g INNER JOIN allgroups a ON g.active = 1 AND g.name = a.name GROUP BY g.name ORDER BY a.last_record DESC")
+cur[0].execute("SELECT g.name AS groupname, g.last_record AS our_last, a.last_record AS thier_last FROM groups g INNER JOIN shortgroups a ON g.active = 1 AND g.name = a.name GROUP BY g.name ORDER BY a.last_record DESC")
 datas = cur[0].fetchall()
 disconnect(cur[0], cur[1])
 
